tests/ui/fail/bad_nesting_2.stderr
error: the matcher defines 3 repetitions (`?+*`) for a but the transcriber uses one repetition (`*`)
 --> tests/ui/fail/bad_nesting_2.rs:5:13
  |
5 |         $( $a )*
  |             ^
